gitops/apps/rhcl-demo/base/resources/34-httproute-ai-bot.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai-bot
  namespace: rhcl-ai-bot
  labels:
    app: rhcl-ai-bot
    service: rhcl-ai-bot
    deployment: rhcl-ai-bot
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-ai-gw
      namespace: openshift-ingress
  rules:
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /mcp
        - method: POST
          path:
            type: PathPrefix
            value: /mcp
        - method: OPTIONS
          path:
            type: PathPrefix
            value: /mcp
        - method: POST
          path:
            type: PathPrefix
            value: /ai
        - method: OPTIONS
          path:
            type: PathPrefix
            value: /ai
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - access-control-allow-credentials
            set:
              - name: access-control-allow-origin
                value: "*"
              - name: access-control-allow-methods
                value: "GET,POST,OPTIONS"
              - name: access-control-allow-headers
                value: "accept,authorization,content-type,origin,x-requested-with"
              - name: access-control-expose-headers
                value: "mcp-session-id"
      backendRefs:
        - group: ""
          kind: Service
          name: rhcl-ai-bot
          port: 80
          weight: 1
